--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Archivo";
+  src: url("./assets/fonts/archivo.ttf") format("truetype");
+}
+
 .light-mode-color {
   --primary: #001830;
 }
